Fix bug for when the feature image is made invisible, the container still has the full height and pushes the layout down.

--- a/less/main/theme.less
+++ b/less/main/theme.less
@@ -110,16 +110,8 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 // ------------------------------
 
 // Main
-.template__content {
-	padding-top: 2em;
-	
-	.page--home & {
-		padding-top: 0 !important;
-	}
-}
-
-.header-feature ~ .template__content {
-    margin-top: 0 !important;
+section.page {
+	margin-top: 4em;
 }
 
 // ------------------------------
