--- a/less/plugins/ecommerce/ecommerce-basket.less
+++ b/less/plugins/ecommerce/ecommerce-basket.less
@@ -3,6 +3,7 @@
 // ----------------------------------------
 //
 // #Basket Icon
+// #Basket Content
 //
 // ----------------------------------------
 
@@ -10,9 +11,10 @@
 // #Basket Icon
 // -----------------------------
 
-.ecombasket {
+.template__content .widget .ecombasket {
 	position: relative;
 	min-height: 3em;
+	margin-top: 1.5em;
 	.clearfix();
 }
 
