--- a/less/widgets/feature.less
+++ b/less/widgets/feature.less
@@ -19,9 +19,6 @@
 
 .header-feature {
 	overflow: hidden;
-	height: 100%;
-	height: 100vh;
-	margin-bottom: 40px;
 	
     .widget[data-widget-type="feature"] {
 		padding: 0;
